--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div> 
     <div class="alert alert-success">
      GetHosp 代码托管在
-     <a href="https://github.com/" target="_blank">Github</a>上，包括数据信息。收录辨别莆田系医院，提供帮助信息。
+     <a href="https://github.com/HuanMeng0/PtxHospSearch" target="_blank">Github</a>上，包括数据信息。收录辨别莆田系医院，提供帮助信息。
      <br />保证信息的绝对公开、透明，拒绝删帖、煽动、不正当竞争等一切行为
     </div>
     <hr />
