--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="app">
    <div class="container">
     <div class="page-header">
-     <h1>莆田系医院公共查询服务<small>&nbsp;一个有情怀的GetHosp，让搜索更简单,安全！</small></h1>
+     <h1>莆田系医院公共查询服务<small>&nbsp;让搜索更简单,安全！</small></h1>
     </div>
     <div class="col-md-12"> 
      <input type="text" class="form-control" autofocus="" placeholder="请输入城市名称 如:北京 厦门" id="keyword" value="{{ keyword }}" v-model="keyword" /> 
@@ -26,7 +26,13 @@
        {{ paneltitle }}
       </div>
       <div class="panel-body">
-       <li v-for="mirror1f in mirror1"> {{ $key }}</li>
+       <li v-for="mirror1f in mirror1" style="word-break:break-all">{{ $index+1 }}.&nbsp; {{ $key }} 
+	   <span v-if="mirror1f.网址" v-for="murl in mirror1f.网址"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>网址:</b> {{ murl }}</span>
+	   <span v-if="mirror1f.电话" v-for="mtel in mirror1f.电话"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>电话:</b> {{ mtel }}</span>
+	   <span v-if="mirror1f.地址" v-for="maddr in mirror1f.地址"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>地址:</b> {{ maddr }}</span>
+	   <span v-if="mirror1f.用户反馈" v-for="mfeedback in mirror1f.用户反馈"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>用户反馈:</b> {{ mfeedback }}</span> 
+	   <br><br>
+	   </li>
       </div>
      </div>
     </div>
@@ -36,7 +42,7 @@
      某些医院只是外包部分科室给莆田系，并不是该医院都是莆田系
     </div> 
     <div class="alert alert-success">
-     GetHosp 代码托管在
+      程序代码托管在
      <a href="https://github.com/HuanMeng0/PtxHospSearch" target="_blank">Github</a>上，包括数据信息。收录辨别莆田系医院，提供帮助信息。
      <br />保证信息的绝对公开、透明，拒绝删帖、煽动、不正当竞争等一切行为
     </div>
@@ -73,6 +79,9 @@ var svm = new Vue({
 svm.$set("paneltitle", "当前搜索关键词:" + svm.keyword);
 svm.$watch("keyword",
 function() {
+	svm.$set("mirror1", {
+                "搜索中……请耐心等候一会": "搜索中……请耐心等候一会"
+            })
     svm.$set("paneltitle", "当前搜索关键词:" + svm.keyword);
     console.log("搜索关键词已更改:" + keyword.value);
     console.log("提交关键词匹配请求");
